cabal-version:      2.2
name:               psql
version:            0.0.0
category:           Database
synopsis:           Tbw
description:        To be written.
author:             Ole Krüger <haskell-psql@vprsm.de>
maintainer:         Ole Krüger <haskell-psql@vprsm.de>
homepage:           https://github.com/vapourismo/psql
license:            BSD-3-Clause
license-file:       LICENSE
extra-source-files: ChangeLog.md
build-type:         Simple

source-repository head
  type:     git
  location: git://github.com/vapourismo/PostgreSQLgit

common warnings
  ghc-options: -Wall -Wextra -Wno-name-shadowing -Wredundant-constraints

library
  import:           warnings
  default-language: Haskell2010
  build-depends:    base >= 4.13 && < 5,
                    bytestring,
                    concurrency,
                    containers,
                    cryptonite,
                    exceptions,
                    megaparsec,
                    mtl,
                    postgresql-libpq,
                    -- FIXME: semigroupoids version needed is not on Hackage yet
                    semigroupoids,
                    -- FIXME: simpoole version needed is not on Hackage yet
                    simpoole >= 0.3.0,
                    template-haskell,
                    text,
                    vector
  hs-source-dirs:   lib
  exposed-modules:  PostgreSQL
                    PostgreSQL.Cell
                    PostgreSQL.Class
                    PostgreSQL.Column
                    PostgreSQL.ConnectionPool
                    PostgreSQL.Param
                    PostgreSQL.Query
                    PostgreSQL.Query.Class
                    PostgreSQL.Result
                    PostgreSQL.Result.Class
                    PostgreSQL.Statement
                    PostgreSQL.Types

test-suite psql-tests
  import:           warnings
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  ghc-options:      -threaded -with-rtsopts=-N
  build-depends:    base,
                    psql
  hs-source-dirs:   test
  main-is:          Main.hs
